# rome-arena

./: .gitignore  CLAUDE.md  Makefile  README.md  battle.html  battle.js  index.html  menu.sh  ragview.html  server.js  sim.js  test_sim.js
ai/: README.md  commander.js  models.js  providers.js
assets/mobs/: manifest.json
assets/vrm/: Nightshade_J_Friedrich.vrm  Paladin_J_Nordstrom.vrm  guard.vrm  merchant.vrm  peasent.vrm
mapgen/: arena.js  mobs.js
physics/: .gitignore  CMakeLists.txt  arena.mjs  arena.wasm  arena_api.js  arena_loader.js  arena_physics.c  bench.js  build.sh  config.js  flowfield.js  fort.js  ragbench.js  smoke.html  smoke.js
